tests/errors/defstest/SHRASS_9004.c
int MAIN()
{
    float i=8,j;
    float *p=&i;
    j=i>>=2;
 
    print("i ",*p);   
    print(i);   
        
    return 0;
}
